REGTESTS = \
  getstatus.py \
  orderbook.py \
  orderrefresh.py \
  trading_asset_spent.py \
  trading_success.py

SCRIPTTESTS = \
  trading_conflict_chi.sh \
  trading_conflict_name.sh

dist_check_SCRIPTS = $(SCRIPTTESTS)
noinst_PYTHON = $(REGTESTS) \
  democrit.py \
  testcase.py \
  trading_conflict.py

TESTS = $(REGTESTS) $(SCRIPTTESTS)
